[tool.poetry]
name = "genai-prompt-sanitization"
version = "0.1.0"
description = "This repository provides examples of using Firewall for AI APIs to sanitize GenAI prompts for popular LLM services and frameworks using Python."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apify-client = "^1.7.0"
chromadb = "^0.5.3"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
openai = "^1.35.10"
python-dotenv = "^1.0.1"
streamlit = "^1.36.0"
tiktoken = "^0.7.0"
anthropic = "^0.30.1"
nightfall = { git = "https://github.com/nightfallai/nightfall-python-sdk.git" }

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
    "duplicate-code",
    "invalid-name",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
